--- a/src/components/Feed/Feed.css
+++ b/src/components/Feed/Feed.css
@@ -28,3 +28,44 @@
 .card p{
    font-size: 14px;
 }
+
+@media(max-width:768px){
+      .feed{
+        grid-template-columns: repeat(auto-fit,minmax(150px,1fr));
+        grid-column-gap: 12px;
+        grid-row-gap: 20px;
+      }
+      .card h2{
+         font-size: 14px;
+      }
+      .card h3{
+          font-size: 12px;
+      }
+      .card p{
+          font-size: 12px;
+      }
+}
+
+@media(max-width:480px) {
+      .feed{
+           grid-template-columns: 1fr;
+           grid-column-gap: 8px;
+           grid-row-gap: 15px;
+           margin-left: -32px;
+      }
+      .card h2{
+          font-size: 12px;
+      }
+      .card h3{
+          font-size: 10px;
+      }
+      .card p{
+          font-size: 10px;
+      }
+}
+
+@media(max-width:320px){
+      .feed{
+         margin-left: -10px;
+      }
+}
