--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -43,3 +43,70 @@ nav{
    width: 35px;
    border-radius: 50%;
 }
+
+@media(max-width:768px){
+     nav{
+       flex-direction: row;
+       padding: 4px 5%;
+     }
+     .nav-left .menu-icon{
+         margin-left: -20px;
+     }
+     .nav-left .logo{
+       width: 100px;
+     }
+     .nav-middle .search-box{
+        width: 100%;
+        margin-right: 0px;
+        margin-bottom: 10px;
+        margin-top: 10px;
+        margin-left: 25px;
+     }
+     .nav-middle .search-box input{
+        width: 100%;
+     }
+     .nav-right{
+         margin-right: -30px;
+     }
+     .nav-right img{
+       width: 20px;
+       margin-right: 15px;
+     }
+     .nav-right .user-icon{
+       width: 30px;
+     }
+}
+
+@media(max-width:480px){
+     .nav-left .menu-icon{
+        display: none;
+     }
+     .nav-left .logo{
+        width: 80px;
+        margin-left: -10px;
+     }
+     .nav-middle .search-box{
+        width: 100%;
+        padding: 6px 8px;
+        margin-left: -2px;
+     }
+     .nav-middle .search-box input{
+        width: 100%;
+     }
+     .nav-right img{
+        width: 18px;
+        margin-right: 10px;
+     }
+     .nav-right .user-icon{
+        width: 28px;
+     }
+}
+
+@media(max-width:320px){
+      .nav-middle .search-box{
+            display: none;
+      }
+      .nav-right{
+           margin-right: -22px;
+      }
+}
