--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -23,9 +23,9 @@
       }
 }
 
-@media(max-width:320px){
-      .container{
-          width: 113%;
+@media(max-width:425px){
+      .large-container{
+          width: 109.5%;
       }
 }
 
